- add searchWithFilter for users