@@ -12,6 +12,7 @@ import ru.skillbox.commondto.account.AccountByFilterDto;
 import ru.skillbox.commondto.account.AccountDto;
 import ru.skillbox.commondto.account.AccountRecoveryRq;
 import ru.skillbox.commondto.account.AccountSearchDto;
+import ru.skillbox.userservice.controller.AccountPredicate;
 import ru.skillbox.userservice.exception.AccountAlreadyExistsException;
 import ru.skillbox.userservice.exception.NoSuchAccountException;
 import ru.skillbox.userservice.exception.NotAuthException;
@@ -20,7 +21,9 @@ import ru.skillbox.userservice.model.entity.User;
 import ru.skillbox.userservice.repository.UserRepository;
 import ru.skillbox.userservice.util.BeanUtil;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -72,10 +75,10 @@ public class AccountService {
         }
     }
 
-    public List<AccountDto> getAllAccounts(Pageable page, Long id) {
-        // TODO: когда в репозитории добавим пагинацию - нужно изменить вызов и передавать page
-        List<User> users = userRepository.findAll();
-        return users.stream().map((user) -> userMapper.userToResponse(id, user)).toList();
+    public Page<AccountDto> getAllAccounts(Pageable page, Long id) {
+        List<User> users = userRepository.findAllByIsDeleted(page, false);
+        List<AccountDto> pageList = users.stream().map(user -> userMapper.userToResponse(id, user)).toList();
+        return new PageImpl<>(pageList, page, users.size());
     }
 
     @Transactional
@@ -87,9 +90,16 @@ public class AccountService {
         return userRepository.save(user).getId();
     }
 
-    public AccountDto searchAccountByFilter(AccountByFilterDto filterDto) {
-        // logic with DB
-        return AccountDto.builder().build();
+    public List<AccountDto> searchAccountByFilter(AccountByFilterDto filterDto) {
+        Stream<User> users = userRepository.findAll().stream();
+        AccountSearchDto params = filterDto.getAccountSearchDto();
+        users = users
+                .filter(AccountPredicate.checkIds(params.getIds()))
+                .filter(AccountPredicate.checkFirstName(params.getFirstName()))
+                .filter(AccountPredicate.checkFirstName(params.getLastName()))
+                .filter(AccountPredicate.birthdayBetween(params.getBirthDateFrom(), params.getBirthDateTo()))
+                .filter(AccountPredicate.checkAge(params.getAgeFrom(), params.getAgeTo()));
+        return users.map(user -> userMapper.userToResponse(user.getId(), user)).toList();
     }
 
     public AccountDto getAccountById(Long id) {
@@ -98,29 +108,22 @@ public class AccountService {
         return userMapper.userToResponse(id, user);
     }
 
-    public List<AccountDto> searchAccount(AccountSearchDto accountSearchDto, Pageable pageable) {
-        // logic with DB
-        return List.of(AccountDto.builder().build());
-    }
-
     public List<Long> getAllIds() {
-        // logic with DB
-        return List.of();
+        return userRepository.findAll().stream().map(User::getId).toList();
     }
 
     public List<AccountDto> getAccountIds(Long[] ids, Pageable page) {
-        // logic with DB
-        return List.of();
+        List<User> users = userRepository.findAll();
+        return users.stream()
+                .filter(user -> Arrays.asList(ids).contains(user.getId()))
+                .map(user -> userMapper.userToResponse(user.getId(), user))
+                .toList();
     }
 
     public Page<AccountDto> searchAccount(boolean isDeleted, long authUserId) {
-
         Pageable nextPage = PageRequest.of(0, Integer.MAX_VALUE);
-
         List<User> users = userRepository.findAllByIsDeleted(nextPage, isDeleted);
-
         List<AccountDto> pageList = users.stream().map(user -> userMapper.userToResponse(authUserId, user)).toList();
-
         return new PageImpl<>(pageList, nextPage, users.size());
     }
 }
